--- a/app/src/main/res/layout/dialog_add_edit_product.xml
+++ b/app/src/main/res/layout/dialog_add_edit_product.xml
@@ -217,10 +217,31 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:orientation="vertical"
-                        android:paddingTop="30dp"
                         android:paddingLeft="10dp"
                         android:paddingRight="10dp"
                         android:paddingBottom="20dp">
+
+
+
+
+                        <LinearLayout android:id="@+id/llProgress"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:orientation="horizontal"
+                            android:gravity="center"
+                            android:visibility="invisible">
+                            <ProgressBar
+                                android:layout_width="40dp"
+                                android:layout_height="40dp" />
+                            <TextView
+                                android:layout_width="wrap_content"
+                                android:layout_height="match_parent"
+                                android:text="guardando..."
+                                android:gravity="center_vertical"/>
+                        </LinearLayout>
+
+
+
 
                         <TextView android:id="@+id/tvMeasureName"
                             android:layout_width="match_parent"
