--- a/app/src/main/res/layout/dialog_spn_save.xml
+++ b/app/src/main/res/layout/dialog_spn_save.xml
@@ -50,6 +50,22 @@
             android:orientation="vertical"
             android:padding="50dp">
 
+            <LinearLayout android:id="@+id/llProgress"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:gravity="center"
+                android:visibility="invisible">
+                <ProgressBar
+                    android:layout_width="40dp"
+                    android:layout_height="40dp" />
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:text="guardando..."
+                    android:gravity="center_vertical"/>
+            </LinearLayout>
+
 
             <LinearLayout android:id="@+id/llFamilia"
                 android:layout_width="match_parent"
