--- a/app/src/main/res/layout/msg_2_buttons.xml
+++ b/app/src/main/res/layout/msg_2_buttons.xml
@@ -66,7 +66,25 @@
                     android:textSize="20sp"
                     android:gravity="center"
                     android:layout_below="@id/img"
-                    android:background="@color/white"/>
+                    android:background="@color/white"
+                    android:paddingLeft="20dp"
+                    android:paddingRight="20dp"/>
+
+                <LinearLayout android:id="@+id/llProgress"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal"
+                    android:gravity="center"
+                    android:visibility="invisible">
+                    <ProgressBar
+                        android:layout_width="40dp"
+                        android:layout_height="40dp" />
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="match_parent"
+                        android:text="por favor espere..."
+                        android:gravity="center_vertical"/>
+                </LinearLayout>
 
 
                 <LinearLayout
