--- a/app/src/main/res/layout/dialog_add_adit_clients.xml
+++ b/app/src/main/res/layout/dialog_add_adit_clients.xml
@@ -43,6 +43,22 @@
             </LinearLayout>
 
 
+            <LinearLayout android:id="@+id/llProgress"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:gravity="center"
+                android:visibility="invisible">
+                <ProgressBar
+                    android:layout_width="40dp"
+                    android:layout_height="40dp" />
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:text="guardando..."
+                    android:gravity="center_vertical"/>
+            </LinearLayout>
+
 
             <LinearLayout
                 android:layout_width="match_parent"
