--- a/app/src/main/res/layout/product_measure_edit_row.xml
+++ b/app/src/main/res/layout/product_measure_edit_row.xml
@@ -18,6 +18,7 @@
             android:text=""
             android:textStyle="bold"
             android:textSize="15sp"/>
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -29,8 +30,8 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_vertical"
                 android:text="Activo"
-                android:focusableInTouchMode="false"
-                android:layout_marginRight="20dp"/>
+                android:layout_marginRight="20dp"
+                android:enabled="false"/>
 
             <TextView
                 android:layout_width="wrap_content"
@@ -68,7 +69,7 @@
             android:layout_height="match_parent"
             android:layout_gravity="center_vertical"
             android:layout_marginRight="20dp"
-            android:focusableInTouchMode="false"
+            android:enabled="false"
             android:text="Rango" />
 
         <TextView
