--- a/app/src/main/res/layout/fragment_reports_sales.xml
+++ b/app/src/main/res/layout/fragment_reports_sales.xml
@@ -131,124 +131,134 @@
         </android.support.v7.widget.CardView>
 
 
-        <LinearLayout android:id="@+id/llGeneral"
+        <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical">
+            android:layout_height="match_parent">
 
-            <TableLayout
+            <LinearLayout android:id="@+id/llGeneral"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="vertical"
-                android:padding="50dp">
+                android:layout_height="match_parent"
+                android:orientation="vertical">
 
-                <TableRow android:layout_width="match_parent"
+                <TableLayout
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:orientation="horizontal">
+                    android:orientation="vertical"
+                    android:padding="50dp">
 
-                    <TextView android:layout_width="wrap_content"
+                    <TableRow android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:text="Total Ventas: "
-                        android:textSize="20sp"/>
+                        android:orientation="horizontal">
 
-                    <TextView android:id="@+id/tvSalesTotalAmount"
-                        android:layout_width="wrap_content"
+                        <TextView android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="Total Ventas: "
+                            android:textSize="20sp"/>
+
+                        <TextView android:id="@+id/tvSalesTotalAmount"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:textSize="20sp"/>
+
+                    </TableRow>
+
+                    <TableRow android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:text=""/>
+                        android:orientation="horizontal">
 
-                </TableRow>
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="Total Descuento: "
+                            android:textSize="20sp"/>
 
-                <TableRow android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="horizontal">
+                        <TextView  android:id="@+id/tvSalesTotalDiscount"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:textSize="20sp"/>
 
-                    <TextView
-                        android:layout_width="wrap_content"
+                    </TableRow>
+
+
+                    <TableRow android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:text="Total Descuento: "
-                        android:textSize="20sp"/>
+                        android:orientation="horizontal">
 
-                    <TextView  android:id="@+id/tvSalesTotalDiscount"
-                        android:layout_width="wrap_content"
+                        <TextView android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="Total Neto: "
+                            android:textSize="20sp"/>
+
+                        <TextView  android:id="@+id/tvSalesNetAmount"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:textSize="20sp"
+                            android:textStyle="bold"/>
+
+                    </TableRow>
+
+
+
+                    <TableRow android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:text=""/>
+                        android:orientation="horizontal"
+                        android:paddingTop="50dp">
 
-                </TableRow>
+                        <TextView android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="Total Efectivo: "
+                            android:textSize="20sp"/>
 
+                        <TextView android:id="@+id/tvSalesCashAmount"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:textSize="20sp"/>
 
-                <TableRow android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="horizontal">
+                    </TableRow>
 
-                    <TextView android:layout_width="wrap_content"
+                    <TableRow android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:text="Total Neto: "
-                        android:textSize="20sp"/>
+                        android:orientation="horizontal">
 
-                    <TextView  android:id="@+id/tvSalesNetAmount"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text=""/>
+                        <TextView android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="Total Credito: "
+                            android:textSize="20sp"/>
 
-                </TableRow>
+                        <TextView android:id="@+id/tvCreditAmount"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:textSize="20sp"/>
 
-
-
-                <TableRow android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="horizontal"
-                    android:paddingTop="50dp">
-
-                    <TextView android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="Total Efectivo: "
-                        android:textSize="20sp"/>
-
-                    <TextView android:id="@+id/tvSalesCashAmount"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text=""/>
-
-                </TableRow>
-
-                <TableRow android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="horizontal">
-
-                    <TextView android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="Total Credito: "
-                        android:textSize="20sp"/>
-
-                    <TextView android:id="@+id/tvCreditAmount"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text=""/>
-
-                </TableRow>
+                    </TableRow>
 
 
-            </TableLayout>
+                </TableLayout>
 
-        </LinearLayout>
+            </LinearLayout>
 
 
 
-<RelativeLayout android:id="@+id/rlList"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
+            <RelativeLayout android:id="@+id/rlList"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:visibility="gone">
 
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/rvList"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+                <android.support.v7.widget.RecyclerView
+                    android:id="@+id/rvList"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"/>
 
-    <ProgressBar android:id="@+id/pb"
-        android:layout_width="80dp"
-        android:layout_height="80dp"
-        android:layout_centerInParent="true"
-        android:visibility="gone"/>
-</RelativeLayout>
+            </RelativeLayout>
+
+            <ProgressBar android:id="@+id/pb"
+                android:layout_width="80dp"
+                android:layout_height="80dp"
+                android:layout_centerInParent="true"
+                android:visibility="gone"/>
+
+        </RelativeLayout>
+
 
 
     </LinearLayout>
