--- a/app/src/main/res/layout/payment_dialog.xml
+++ b/app/src/main/res/layout/payment_dialog.xml
@@ -107,6 +107,22 @@
 
                 </LinearLayout>
 
+            <LinearLayout android:id="@+id/llProgress"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:gravity="center"
+                android:visibility="invisible">
+
+                <ProgressBar
+                    android:layout_width="50dp"
+                    android:layout_height="50dp" />
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Guardando..."/>
+            </LinearLayout>
+
 
             <android.support.v7.widget.CardView
                 android:id="@+id/cvPay"
