--- a/app/src/main/res/layout/row_day.xml
+++ b/app/src/main/res/layout/row_day.xml
@@ -51,9 +51,35 @@
 
             <TextView android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Total Ventas"/>
+                android:text="Ventas Brutas"/>
 
             <TextView android:id="@+id/tvSalesTotal"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:text=""
+                android:layout_weight="3"/>
+        </TableRow>
+
+
+        <TableRow android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <TextView android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Descuentos:"/>
+
+            <TextView android:id="@+id/tvDiscountAmount"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:text=""
+                android:layout_weight="1"/>
+
+            <TextView android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Ventas Netas"/>
+
+            <TextView  android:id="@+id/tvNetAmount"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:text=""
@@ -116,24 +142,15 @@
 
             <TextView android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Descuentos:"/>
+                android:text="Total Pagos:"/>
 
-            <TextView android:id="@+id/tvDiscountAmount"
+            <TextView android:id="@+id/tvTotalPayment"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:text=""
                 android:layout_weight="1"/>
 
-            <TextView android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Ventas Netas"/>
 
-            <TextView android:id="@+id/tvNetAmount"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:text=""
-                android:layout_weight="2"
-                android:textStyle="bold"/>
         </TableRow>
     </TableLayout>
 
