--- a/app/src/main/res/layout/fragment_blank.xml
+++ b/app/src/main/res/layout/fragment_blank.xml
@@ -5,11 +5,20 @@
     android:layout_height="match_parent"
     tools:context=".LogoFragment">
 
-    <ImageView
-        android:layout_width="80dp"
-        android:layout_height="80dp"
+    <ImageView android:id="@+id/imgLogo"
+        android:layout_width="200dp"
+        android:layout_height="200dp"
         android:layout_centerInParent="true"
         android:src="@mipmap/ic_launcher_round"/>
+
+    <TextView android:id="@+id/tvName"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/imgLogo"
+        android:gravity="center"
+        android:textSize="25sp"
+        android:textStyle="bold"
+        android:text="@string/app_name"/>
 
 
 </RelativeLayout>
