--- a/app/src/main/res/layout/fragment_maintenance.xml
+++ b/app/src/main/res/layout/fragment_maintenance.xml
@@ -568,7 +568,8 @@
                             android:layout_height="match_parent"
                             android:layout_weight="1"
                             android:gravity="center"
-                            android:orientation="vertical">
+                            android:orientation="vertical"
+                            android:id="@+id/llMeasure">
 
                             <android.support.v7.widget.CardView
                                 android:layout_width="100dp"
