--- a/app/src/main/res/layout/dialog_receipt_options.xml
+++ b/app/src/main/res/layout/dialog_receipt_options.xml
@@ -124,6 +124,37 @@
             android:text="Compartir en PDF"/>
     </LinearLayout>
 
+
+    <LinearLayout android:id="@+id/llAnulate"
+        android:layout_width="200dp"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:paddingTop="20dp"
+        android:visibility="visible">
+
+        <android.support.v7.widget.CardView
+            android:layout_width="60dp"
+            android:layout_height="60dp"
+            app:cardCornerRadius="30dp"
+            app:cardBackgroundColor="@color/red_700">
+            <ImageView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:src="@drawable/ic_cancel"
+                android:padding="10dp"
+                android:tint="@color/white"/>
+
+        </android.support.v7.widget.CardView>
+        <TextView
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:gravity="center_vertical"
+            android:textStyle="bold"
+            android:paddingLeft="10dp"
+            android:text="Anular"/>
+    </LinearLayout>
+
     <TextView android:id="@+id/tvErrorMsg"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
