--- a/app/src/main/res/layout/receipt_row.xml
+++ b/app/src/main/res/layout/receipt_row.xml
@@ -64,6 +64,27 @@
         </LinearLayout>
 
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Tel: "
+            android:visibility="gone"
+            android:textSize="18sp"
+            android:paddingRight="5dp"/>
+
+        <TextView android:id="@+id/tvPhone"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:text=""
+            android:layout_weight="1.5"
+            android:visibility="gone"
+            android:textSize="18sp"/>
+
+    </LinearLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -96,21 +117,6 @@
                 android:gravity="right"
                 android:textSize="18sp"/>
 
-            <TextView
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:text="Tel: "
-                android:layout_weight="1.3"
-                android:gravity="right"
-                android:visibility="gone"/>
-
-            <TextView android:id="@+id/tvPhone"
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:text=""
-                android:layout_weight="1.5"
-                android:gravity="right"
-                android:visibility="gone"/>
         </LinearLayout>
 
     <LinearLayout
